# chd_postprocessing

./: .gitignore  ANALYSIS.md  README.md  disease_map.json  pyproject.toml  requirements.txt
chd_postprocessing/: __init__.py  adjacency_correction.py  anatomy_priors.py  atlas.py  atlas_pipeline.py  boundary_refinement.py  config.py  connected_components.py  evaluate.py  io_utils.py  label_correction.py  pipeline.py  registration.py
notebooks/: atlas_comparison.ipynb
scripts/: build_disease_atlases.py  evaluate_before_after.py  run_atlas_postprocessing.py  run_postprocessing.py  sanity_check.py  visualize_case.py
tests/: test_adjacency_correction.py  test_anatomy_priors.py  test_atlas_pipeline.py  test_boundary_refinement.py  test_connected_components.py
